--- a/tickets.html
+++ b/tickets.html
@@ -8,6 +8,7 @@
 
 <body class="bg-paper">
 
+<!-- 🔐 PROTEÇÃO DE ACESSO -->
 <script>
   const usuario = JSON.parse(localStorage.getItem("usuario"));
   if (!usuario || usuario.nivel !== "cidadao") {
@@ -15,6 +16,7 @@
   }
 </script>
 
+<!-- ================= HEADER ================= -->
 <header class="header small official">
   <img src="logo-oasis.png" class="logo small" />
   <div class="header-text">
@@ -23,6 +25,7 @@
   </div>
 </header>
 
+<!-- ================= NAVBAR ================= -->
 <nav class="nav-bar official">
   <button onclick="irAba('solicitacoes')">📂 Solicitações</button>
   <button onclick="irAba('andamento')">🕒 Em andamento</button>
@@ -30,16 +33,19 @@
   <button onclick="sair()">🚪 Encerrar Sessão</button>
 </nav>
 
+<!-- ================= CONTEÚDO ================= -->
 <main class="content official">
 
-  <!-- SOLICITAÇÕES -->
+  <!-- ================= SOLICITAÇÕES ================= -->
   <section id="solicitacoes" class="aba solicitacoes-clean">
+
     <div class="solicitacoes-header">
       <img src="logo-oasis.png" class="logo-grande">
       <h2>Solicitações ao Supremo Tribunal de Oasis</h2>
       <p>Selecione abaixo o tipo de serviço desejado para iniciar um atendimento oficial.</p>
     </div>
 
+    <!-- SERVIÇOS CIVIS -->
     <div class="bloco-servicos">
       <h3>💍 Serviços Civis</h3>
       <div class="grid-servicos">
@@ -51,6 +57,7 @@
       </div>
     </div>
 
+    <!-- SERVIÇOS JURÍDICOS -->
     <div class="bloco-servicos">
       <h3>⚖️ Serviços Jurídicos</h3>
       <div class="grid-servicos">
@@ -60,6 +67,7 @@
       </div>
     </div>
 
+    <!-- ADMINISTRATIVOS (permitidos apenas como solicitação, não como painel) -->
     <div class="bloco-servicos">
       <h3>🏛️ Demandas Administrativas</h3>
       <div class="grid-servicos">
@@ -69,16 +77,28 @@
         <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
       </div>
     </div>
+
   </section>
 
-  <!-- EM ANDAMENTO -->
+  <!-- ================= EM ANDAMENTO ================= -->
   <section id="andamento" class="aba">
     <h2>🕒 Tickets em Andamento</h2>
-    <p class="section-desc">Acompanhe abaixo seus atendimentos ativos.</p>
-    <div id="listaTickets" class="card-list official"></div>
+    <p class="section-desc">
+      Selecione uma categoria para visualizar seus atendimentos ativos.
+    </p>
+
+    <!-- CATEGORIAS -->
+    <div id="categoriasTickets" class="categoria-grid"></div>
+
+    <!-- LISTA POR CATEGORIA -->
+    <div id="listaPorCategoria" class="lista-categoria hidden">
+      <button class="btn-secondary" onclick="voltarCategorias()">⬅ Voltar</button>
+      <h3 id="tituloCategoria"></h3>
+      <div id="ticketsCategoria" class="card-list official"></div>
+    </div>
   </section>
 
-  <!-- CHAT -->
+  <!-- ================= CHAT ================= -->
   <section id="chat" class="aba">
     <h2 id="chatTitulo">💬 Atendimento</h2>
     <div id="mensagens" class="chat-box official"></div>
@@ -91,13 +111,41 @@
     </div>
   </section>
 
-  <!-- PREÇOS -->
+  <!-- ================= PREÇOS ================= -->
   <section id="precos" class="aba">
-    <!-- (conteúdo mantido igual ao seu original) -->
+    <h2>⚖️ Serviços Disponíveis ao Público – Supremo Tribunal de Oasis</h2>
+
+    <div class="price-card official">
+      <h3>🏛️ Atendimentos Jurídicos</h3>
+      <ul>
+        <li>Delegacia Sul — <b>$20.000</b></li>
+        <li>Delegacia PRF — <b>$30.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>🔫 Porte de Arma</h3>
+      <ul>
+        <li>Emissão de porte legal — <b>$20.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>💍 Certidões Civis</h3>
+      <ul>
+        <li>Casamento — <b>$150.000</b></li>
+        <li>Divórcio — <b>$200.000</b></li>
+        <li>Troca de Nome — <b>$250.000</b></li>
+        <li>Adoção — <b>$50.000</b></li>
+        <li>Nascimento — <b>$50.000</b></li>
+        <li>Jovem Aprendiz — <b>$30.000</b></li>
+      </ul>
+    </div>
   </section>
 
 </main>
 
+<!-- ================= SCRIPTS ================= -->
 <script type="module" src="script.js"></script>
 
 <script>
