--- a/staff/juridico.html
+++ b/staff/juridico.html
@@ -5,7 +5,6 @@
   <title>Painel Jurídico — Supremo Tribunal de Oasis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- ESTILO GLOBAL -->
   <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -30,19 +29,21 @@
 
 <!-- ================= NAVBAR ================= -->
 <nav class="nav-bar official">
-  <button type="button" onclick="mostrarPainel()">📂 Tickets Abertos</button>
+  <button type="button" onclick="mostrarPainel()">📂 Tickets</button>
   <button type="button" onclick="sair()">🚪 Encerrar Sessão</button>
 </nav>
 
 <!-- ================= CONTEÚDO ================= -->
 <main class="content official">
 
-  <!-- ================= LISTA DE TICKETS ================= -->
+  <!-- ================= LISTA ================= -->
   <section id="painel" class="aba active">
     <h2>📂 Tickets Abertos</h2>
-    <p class="section-desc">
-      Selecione um ticket para iniciar o atendimento jurídico.
-    </p>
+
+    <!-- FILTRO -->
+    <select id="filtroCategoria" onchange="filtrarCategoria()">
+      <option value="">Todas as categorias</option>
+    </select>
 
     <div id="listaTickets" class="card-list official"></div>
   </section>
@@ -53,46 +54,18 @@
 
     <div id="mensagens" class="chat-box official"></div>
 
-    <div id="digitando"></div>
-
     <div class="chat-input official">
-      <input
-        id="mensagem"
-        type="text"
-        placeholder="Digite sua resposta jurídica..."
-      >
-
+      <input id="mensagem" placeholder="Digite sua resposta jurídica...">
       <input type="file" id="arquivo">
 
-      <button
-        id="btnEnviar"
-        type="button"
-        onclick="enviarMensagem()"
-      >
-        Enviar
-      </button>
-
-      <button
-        type="button"
-        class="btn-secondary"
-        onclick="encerrarTicket()"
-      >
-        🔒 Encerrar Ticket
-      </button>
-
-      <button
-        type="button"
-        class="btn-secondary"
-        onclick="voltarPainel()"
-      >
-        ⬅ Voltar
-      </button>
+      <button id="btnEnviar" onclick="enviarMensagem()">Enviar</button>
+      <button class="btn-secondary" onclick="encerrarTicket()">🔒 Encerrar</button>
+      <button class="btn-secondary" onclick="voltarPainel()">⬅ Voltar</button>
     </div>
   </section>
 
 </main>
 
-<!-- ================= SCRIPTS ================= -->
 <script type="module" src="juridico.js"></script>
 
 <script>
