--- a/staff/callback.html
+++ b/staff/callback.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Autenticação — Supremo Tribunal de Oasis</title>
+</head>
+<body>
 <script>
 const params = new URLSearchParams(window.location.search);
 const session = params.get("session");
@@ -7,17 +14,16 @@ if (session && nivel) {
   try {
     const usuario = JSON.parse(atob(session));
 
-    // 🔐 FORÇA O NÍVEL CORRETO
+    // 🔒 FIXA O NÍVEL REAL
     usuario.nivel = nivel;
 
     localStorage.setItem("usuario", JSON.stringify(usuario));
 
-    window.history.replaceState({}, document.title, "/sistema-oasis/");
+    window.history.replaceState({}, document.title, "/staff/");
 
     if (nivel === "cidadao") location.href = "tickets.html";
     if (nivel === "juridico") location.href = "juridico.html";
     if (nivel === "coordenacao") location.href = "coordenacao.html";
-
   } catch (e) {
     console.error(e);
     localStorage.removeItem("usuario");
@@ -27,3 +33,5 @@ if (session && nivel) {
   location.href = "index.html";
 }
 </script>
+</body>
+</html>
