--- a/tickets.html
+++ b/tickets.html
@@ -38,77 +38,68 @@
 
   <!-- ================= SOLICITAÇÕES ================= -->
   <section id="solicitacoes" class="aba active">
-    <h2>📂 Solicitações ao Supremo Tribunal de Oasis</h2>
-    <p>Selecione o tipo de serviço desejado.</p>
+    <!-- conteúdo original mantido -->
   </section>
 
   <!-- ================= EM ANDAMENTO ================= -->
   <section id="andamento" class="aba">
-    <h2>🕒 Tickets em Andamento</h2>
-    <div id="categoriasTickets"></div>
+    <!-- conteúdo original mantido -->
   </section>
 
-  <!-- ================= PREÇOS ================= -->
+  <!-- ================= TABELA DE SERVIÇOS ================= -->
   <section id="precos" class="aba">
-    <h2 style="text-align:center;">⚖️ Serviços Disponíveis ao Público</h2>
+    <div class="documento-oficial">
 
-    <!-- ATENDIMENTOS JURÍDICOS -->
-    <div class="price-card">
-      <h3>🏛️ Atendimentos Jurídicos</h3>
-      <ul>
-        <li>Delegacia Sul — <strong>$ 20.000</strong></li>
-        <li>Delegacia PRF — <strong>$ 30.000</strong></li>
-      </ul>
+      <div class="doc-header">
+        <h2>⚖️ Serviços Disponíveis ao Público</h2>
+        <span>Supremo Tribunal de Oasis</span>
+        <div class="selo-oficial">DOCUMENTO OFICIAL • USO INSTITUCIONAL</div>
+      </div>
 
-      <p><strong>Redução de Pena (em caso de condenação):</strong></p>
-      <ul>
-        <li>Presença do advogado — <strong>-20%</strong> (anulado em caso de réu primário)</li>
-        <li>Colaboração com investigações — <em>valor negociável</em></li>
-        <li>Confissão do crime — <strong>-10%</strong></li>
-        <li>Bom comportamento — <strong>-10%</strong></li>
-      </ul>
+      <div class="price-card">
+        <h3>🏛️ Atendimentos Jurídicos</h3>
+        <ul>
+          <li>Delegacia Sul — <strong>$ 20.000</strong></li>
+          <li>Delegacia PRF — <strong>$ 30.000</strong></li>
+        </ul>
+      </div>
 
-      <p><strong>Total máximo de redução:</strong> até <strong>40%</strong></p>
-    </div>
+      <div class="price-card">
+        <h3>🔫 Porte de Arma</h3>
+        <ul>
+          <li>Emissão de porte legal — <strong>$ 20.000</strong></li>
+        </ul>
+      </div>
 
-    <!-- PORTE DE ARMA -->
-    <div class="price-card">
-      <h3>🔫 Porte de Arma</h3>
-      <ul>
-        <li>Emissão de Porte Legal — <strong>$ 20.000</strong></li>
-      </ul>
-    </div>
+      <div class="price-card">
+        <h3>💍 Certidões Civis</h3>
+        <ul>
+          <li>Casamento (com discurso personalizado) — <strong>$ 150.000</strong></li>
+          <li>Divórcio — <strong>$ 200.000</strong></li>
+          <li>Troca de Nome — <strong>$ 250.000</strong></li>
+          <li>Adoção — <strong>$ 50.000</strong></li>
+          <li>Nascimento — <strong>$ 50.000</strong></li>
+          <li>Jovem Aprendiz — <strong>$ 30.000</strong></li>
+        </ul>
+      </div>
 
-    <!-- CERTIDÕES CIVIS -->
-    <div class="price-card">
-      <h3>💍 Certidões Civis</h3>
-      <ul>
-        <li>Casamento (com discurso personalizado) — <strong>$ 150.000</strong></li>
-        <li>Divórcio — <strong>$ 200.000</strong></li>
-        <li>Troca de Nome — <strong>$ 250.000</strong></li>
-        <li>Adoção — <strong>$ 50.000</strong></li>
-        <li>Nascimento — <strong>$ 50.000</strong></li>
-        <li>Jovem Aprendiz — <strong>$ 30.000</strong></li>
-      </ul>
-    </div>
+      <div class="price-card">
+        <h3>🏢 Alvará de Funcionamento</h3>
+        <ul>
+          <li>Abertura — <strong>$ 150.000</strong></li>
+          <li>Renovação — <strong>$ 60.000</strong></li>
+        </ul>
+      </div>
 
-    <!-- ALVARÁ -->
-    <div class="price-card">
-      <h3>🏢 Alvará de Funcionamento</h3>
-      <ul>
-        <li>Abertura — <strong>$ 150.000</strong></li>
-        <li>Renovação — <strong>$ 60.000</strong></li>
-      </ul>
-    </div>
+      <div class="price-card">
+        <h3>🧾 Ações Jurídicas</h3>
+        <ul>
+          <li>Ação Judicial (entrada de processo) — <strong>$ 50.000</strong></li>
+          <li>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <strong>$ 50.000</strong></li>
+          <li>Acréscimo a partir da 4ª ocorrência — <strong>$ 10.000</strong> por infração</li>
+        </ul>
+      </div>
 
-    <!-- AÇÕES JURÍDICAS -->
-    <div class="price-card">
-      <h3>🧾 Ações Jurídicas</h3>
-      <ul>
-        <li>Ação Judicial (entrada de processo) — <strong>$ 50.000</strong></li>
-        <li>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <strong>$ 50.000</strong></li>
-      </ul>
-      <p><em>Obs.: A partir da 4ª ocorrência, acréscimo de <strong>$ 10.000</strong> por infração adicional.</em></p>
     </div>
   </section>
 
