--- a/tickets.html
+++ b/tickets.html
@@ -38,15 +38,17 @@
 
   <!-- ================= SOLICITAÇÕES ================= -->
   <section id="solicitacoes" class="aba active">
-    <!-- conteúdo original mantido -->
+    <h2>📂 Solicitações ao Supremo Tribunal de Oasis</h2>
+    <p>Selecione o tipo de serviço desejado.</p>
   </section>
 
   <!-- ================= EM ANDAMENTO ================= -->
   <section id="andamento" class="aba">
-    <!-- conteúdo original mantido -->
+    <h2>🕒 Tickets em Andamento</h2>
+    <div id="categoriasTickets"></div>
   </section>
 
-  <!-- ================= TABELA DE SERVIÇOS ================= -->
+  <!-- ================= PREÇOS ================= -->
   <section id="precos" class="aba">
     <div class="documento-oficial">
 
@@ -56,21 +58,34 @@
         <div class="selo-oficial">DOCUMENTO OFICIAL • USO INSTITUCIONAL</div>
       </div>
 
+      <!-- ATENDIMENTOS JURÍDICOS -->
       <div class="price-card">
         <h3>🏛️ Atendimentos Jurídicos</h3>
         <ul>
           <li>Delegacia Sul — <strong>$ 20.000</strong></li>
           <li>Delegacia PRF — <strong>$ 30.000</strong></li>
         </ul>
+
+        <p><strong>Redução de Pena (em caso de condenação):</strong></p>
+        <ul>
+          <li>Presença do advogado — <strong>-20%</strong> (anulado em caso de réu primário)</li>
+          <li>Colaboração com investigações — <em>a ser combinado com o oficial</em></li>
+          <li>Confissão do crime — <strong>-10%</strong></li>
+          <li>Bom comportamento — <strong>-10%</strong></li>
+        </ul>
+
+        <p><strong>Total possível de redução:</strong> até <strong>40%</strong></p>
       </div>
 
+      <!-- PORTE DE ARMA -->
       <div class="price-card">
         <h3>🔫 Porte de Arma</h3>
         <ul>
-          <li>Emissão de porte legal — <strong>$ 20.000</strong></li>
+          <li>Emissão de Porte Legal — <strong>$ 20.000</strong></li>
         </ul>
       </div>
 
+      <!-- CERTIDÕES CIVIS -->
       <div class="price-card">
         <h3>💍 Certidões Civis</h3>
         <ul>
@@ -83,6 +98,7 @@
         </ul>
       </div>
 
+      <!-- ALVARÁ -->
       <div class="price-card">
         <h3>🏢 Alvará de Funcionamento</h3>
         <ul>
@@ -91,13 +107,14 @@
         </ul>
       </div>
 
+      <!-- AÇÕES JURÍDICAS -->
       <div class="price-card">
         <h3>🧾 Ações Jurídicas</h3>
         <ul>
           <li>Ação Judicial (entrada de processo) — <strong>$ 50.000</strong></li>
           <li>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <strong>$ 50.000</strong></li>
-          <li>Acréscimo a partir da 4ª ocorrência — <strong>$ 10.000</strong> por infração</li>
         </ul>
+        <p><em>Obs.: A partir da 4ª ocorrência, acréscimo de <strong>$ 10.000</strong> por infração adicional.</em></p>
       </div>
 
     </div>
