--- a/tickets.html
+++ b/tickets.html
@@ -36,89 +36,127 @@
 <!-- ================= CONTEÚDO ================= -->
 <main class="content official">
 
-  <!-- ================= SOLICITAÇÕES ================= -->
-  <section id="solicitacoes" class="aba active">
-    <h2>📂 Solicitações ao Supremo Tribunal de Oasis</h2>
-    <p>Selecione o tipo de serviço desejado.</p>
-  </section>
+<!-- =================================================
+     📂 SOLICITAÇÕES — RESTAURADA (FUNCIONAL)
+================================================== -->
+<section id="solicitacoes" class="aba active">
 
-  <!-- ================= EM ANDAMENTO ================= -->
-  <section id="andamento" class="aba">
-    <h2>🕒 Tickets em Andamento</h2>
-    <div id="categoriasTickets"></div>
-  </section>
+  <div class="solicitacoes-header">
+    <img src="logo-oasis.png" class="logo">
+    <h2>Solicitações ao Supremo Tribunal de Oasis</h2>
+    <p>Selecione abaixo o tipo de serviço desejado.</p>
+  </div>
 
-  <!-- ================= PREÇOS ================= -->
-  <section id="precos" class="aba">
-    <div class="documento-oficial">
-
-      <div class="doc-header">
-        <h2>⚖️ Serviços Disponíveis ao Público</h2>
-        <span>Supremo Tribunal de Oasis</span>
-        <div class="selo-oficial">DOCUMENTO OFICIAL • USO INSTITUCIONAL</div>
-      </div>
-
-      <!-- ATENDIMENTOS JURÍDICOS -->
-      <div class="price-card">
-        <h3>🏛️ Atendimentos Jurídicos</h3>
-        <ul>
-          <li>Delegacia Sul — <strong>$ 20.000</strong></li>
-          <li>Delegacia PRF — <strong>$ 30.000</strong></li>
-        </ul>
-
-        <p><strong>Redução de Pena (em caso de condenação):</strong></p>
-        <ul>
-          <li>Presença do advogado — <strong>-20%</strong> (anulado em caso de réu primário)</li>
-          <li>Colaboração com investigações — <em>a ser combinado com o oficial</em></li>
-          <li>Confissão do crime — <strong>-10%</strong></li>
-          <li>Bom comportamento — <strong>-10%</strong></li>
-        </ul>
-
-        <p><strong>Total possível de redução:</strong> até <strong>40%</strong></p>
-      </div>
-
-      <!-- PORTE DE ARMA -->
-      <div class="price-card">
-        <h3>🔫 Porte de Arma</h3>
-        <ul>
-          <li>Emissão de Porte Legal — <strong>$ 20.000</strong></li>
-        </ul>
-      </div>
-
-      <!-- CERTIDÕES CIVIS -->
-      <div class="price-card">
-        <h3>💍 Certidões Civis</h3>
-        <ul>
-          <li>Casamento (com discurso personalizado) — <strong>$ 150.000</strong></li>
-          <li>Divórcio — <strong>$ 200.000</strong></li>
-          <li>Troca de Nome — <strong>$ 250.000</strong></li>
-          <li>Adoção — <strong>$ 50.000</strong></li>
-          <li>Nascimento — <strong>$ 50.000</strong></li>
-          <li>Jovem Aprendiz — <strong>$ 30.000</strong></li>
-        </ul>
-      </div>
-
-      <!-- ALVARÁ -->
-      <div class="price-card">
-        <h3>🏢 Alvará de Funcionamento</h3>
-        <ul>
-          <li>Abertura — <strong>$ 150.000</strong></li>
-          <li>Renovação — <strong>$ 60.000</strong></li>
-        </ul>
-      </div>
-
-      <!-- AÇÕES JURÍDICAS -->
-      <div class="price-card">
-        <h3>🧾 Ações Jurídicas</h3>
-        <ul>
-          <li>Ação Judicial (entrada de processo) — <strong>$ 50.000</strong></li>
-          <li>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <strong>$ 50.000</strong></li>
-        </ul>
-        <p><em>Obs.: A partir da 4ª ocorrência, acréscimo de <strong>$ 10.000</strong> por infração adicional.</em></p>
-      </div>
-
+  <div class="bloco-servicos">
+    <h3>💍 Serviços Civis</h3>
+    <div class="grid-servicos">
+      <button onclick="abrirCategoria('Casamento')">Casamento</button>
+      <button onclick="abrirCategoria('Divórcio')">Divórcio</button>
+      <button onclick="abrirCategoria('Nascimento')">Nascimento</button>
+      <button onclick="abrirCategoria('Adoção')">Adoção</button>
+      <button onclick="abrirCategoria('Troca de Nome')">Troca de Nome</button>
     </div>
-  </section>
+  </div>
+
+  <div class="bloco-servicos">
+    <h3>⚖️ Serviços Jurídicos</h3>
+    <div class="grid-servicos">
+      <button onclick="abrirCategoria('Porte de Arma')">Porte de Arma</button>
+      <button onclick="abrirCategoria('Limpeza de Ficha')">Limpeza de Ficha</button>
+      <button onclick="abrirCategoria('Jovem Aprendiz')">Jovem Aprendiz</button>
+    </div>
+  </div>
+
+  <div class="bloco-servicos">
+    <h3>🏛️ Demandas Administrativas</h3>
+    <div class="grid-servicos">
+      <button onclick="abrirCategoria('Denúncia')">Denúncia</button>
+      <button onclick="abrirCategoria('Falar com o Juiz')">Falar com o Juiz</button>
+      <button onclick="abrirCategoria('Processos')">Processos</button>
+      <button onclick="abrirCategoria('Suporte')">Suporte</button>
+    </div>
+  </div>
+
+</section>
+
+<!-- =================================================
+     🕒 EM ANDAMENTO — RESTAURADA (FUNCIONAL)
+================================================== -->
+<section id="andamento" class="aba">
+
+  <h2>🕒 Tickets em Andamento</h2>
+  <p class="section-desc">Selecione uma categoria para visualizar seus tickets.</p>
+
+  <!-- categorias -->
+  <div id="categoriasTickets" class="categoria-grid"></div>
+
+  <!-- lista por categoria -->
+  <div id="listaPorCategoria" class="lista-categoria hidden">
+    <button class="btn-secondary" onclick="voltarCategorias()">⬅ Voltar</button>
+    <h3 id="tituloCategoria"></h3>
+    <div id="ticketsCategoria" class="card-list"></div>
+  </div>
+
+</section>
+
+<!-- =================================================
+     💰 TABELA DE SERVIÇOS — MANTIDA (NÃO ALTERAR)
+================================================== -->
+<section id="precos" class="aba">
+  <div class="documento-oficial">
+
+    <div class="doc-header">
+      <h2>⚖️ Serviços Disponíveis ao Público</h2>
+      <span>Supremo Tribunal de Oasis</span>
+      <div class="selo-oficial">DOCUMENTO OFICIAL • USO INSTITUCIONAL</div>
+    </div>
+
+    <div class="price-card">
+      <h3>🏛️ Atendimentos Jurídicos</h3>
+      <ul>
+        <li>Delegacia Sul — <strong>$ 20.000</strong></li>
+        <li>Delegacia PRF — <strong>$ 30.000</strong></li>
+      </ul>
+    </div>
+
+    <div class="price-card">
+      <h3>🔫 Porte de Arma</h3>
+      <ul>
+        <li>Emissão de porte legal — <strong>$ 20.000</strong></li>
+      </ul>
+    </div>
+
+    <div class="price-card">
+      <h3>💍 Certidões Civis</h3>
+      <ul>
+        <li>Casamento (com discurso personalizado) — <strong>$ 150.000</strong></li>
+        <li>Divórcio — <strong>$ 200.000</strong></li>
+        <li>Troca de Nome — <strong>$ 250.000</strong></li>
+        <li>Adoção — <strong>$ 50.000</strong></li>
+        <li>Nascimento — <strong>$ 50.000</strong></li>
+        <li>Jovem Aprendiz — <strong>$ 30.000</strong></li>
+      </ul>
+    </div>
+
+    <div class="price-card">
+      <h3>🏢 Alvará de Funcionamento</h3>
+      <ul>
+        <li>Abertura — <strong>$ 150.000</strong></li>
+        <li>Renovação — <strong>$ 60.000</strong></li>
+      </ul>
+    </div>
+
+    <div class="price-card">
+      <h3>🧾 Ações Jurídicas</h3>
+      <ul>
+        <li>Ação Judicial (entrada de processo) — <strong>$ 50.000</strong></li>
+        <li>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <strong>$ 50.000</strong></li>
+        <li>A partir da 4ª ocorrência — <strong>$ 10.000</strong> por infração</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
 
 </main>
 
