--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
   display:flex;
   align-items:center;
   justify-content:center;
+  position:relative;
 ">
+
+<!-- MARCA D’ÁGUA -->
+<div style="
+  position:fixed;
+  inset:0;
+  background:url('logo-oasis.png') no-repeat center;
+  background-size:520px;
+  opacity:0.05;
+  pointer-events:none;
+"></div>
 
 <div style="
   background:#f8f4ee;
@@ -23,22 +34,64 @@
   width:360px;
   text-align:center;
   border:2px solid #d4af37;
+  position:relative;
+  z-index:1;
 ">
 
-  <h1 style="color:#5b0f0f;">SUPREMO TRIBUNAL DE OASIS ⚖️</h1>
-  <p>Portal Oficial de Acesso Institucional</p>
+  <h1 style="color:#5b0f0f; margin-bottom:6px;">
+    SUPREMO TRIBUNAL DE OASIS ⚖️
+  </h1>
 
-  <button onclick="login('cidadao')" style="width:100%;padding:14px;margin:10px 0;border-radius:14px;border:none;background:#6b0f0f;color:#fff;">
+  <p style="font-size:13px; margin-bottom:20px;">
+    Portal Oficial de Acesso Institucional
+  </p>
+
+  <button onclick="login('cidadao')" style="
+    width:100%;
+    padding:14px;
+    margin:10px 0;
+    border-radius:14px;
+    border:none;
+    background:linear-gradient(to bottom,#7a1c1c,#5b0f0f);
+    color:#fff;
+    cursor:pointer;
+  ">
     👤 Acesso do Cidadão
   </button>
 
-  <button onclick="login('juridico')" style="width:100%;padding:14px;margin:10px 0;border-radius:14px;border:none;background:#6b0f0f;color:#fff;">
+  <button onclick="login('juridico')" style="
+    width:100%;
+    padding:14px;
+    margin:10px 0;
+    border-radius:14px;
+    border:none;
+    background:linear-gradient(to bottom,#7a1c1c,#5b0f0f);
+    color:#fff;
+    cursor:pointer;
+  ">
     ⚖️ Acesso Jurídico
   </button>
 
-  <button onclick="login('coordenacao')" style="width:100%;padding:14px;margin:10px 0;border-radius:14px;border:none;background:#6b0f0f;color:#fff;">
+  <button onclick="login('coordenacao')" style="
+    width:100%;
+    padding:14px;
+    margin:10px 0;
+    border-radius:14px;
+    border:none;
+    background:linear-gradient(to bottom,#7a1c1c,#5b0f0f);
+    color:#fff;
+    cursor:pointer;
+  ">
     👑 Coordenação
   </button>
+
+  <p style="font-size:11px; margin-top:16px; color:#555;">
+    Sistema institucional — acesso monitorado
+  </p>
+
+  <footer style="margin-top:20px; font-size:11px; color:#555;">
+    Site desenvolvido por <strong style="color:#7a1c1c;">Hinara Heloar</strong> — direitos reservados
+  </footer>
 
 </div>
 
