--- a/auth.html
+++ b/auth.html
@@ -3,10 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <title>Autenticando</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
 
-<p>Autenticando, aguarde...</p>
+<body style="
+  margin:0;
+  font-family: Georgia, serif;
+  background: radial-gradient(circle, #7a1c1c, #3b0d0d);
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#2b2b2b;
+">
+
+<div style="
+  background:#f8f4ee;
+  border-radius:18px;
+  padding:30px;
+  width:320px;
+  text-align:center;
+  border:2px solid #d4af37;
+">
+
+  <p style="margin-bottom:12px;">
+    🔐 Autenticando, aguarde…
+  </p>
+
+  <p style="font-size:11px; color:#555;">
+    Sistema institucional — acesso monitorado
+  </p>
+
+</div>
 
 <script>
 (function () {
