--- a/tickets.html
+++ b/tickets.html
@@ -93,7 +93,7 @@
 
 </section>
 
-<!-- ================= CHAT (RESTAURADO) ================= -->
+<!-- ================= CHAT ================= -->
 <section id="chat" class="aba">
 
   <h2 id="chatTitulo">💬 Atendimento</h2>
@@ -109,7 +109,7 @@
 
 </section>
 
-<!-- ================= TABELA DE SERVIÇOS (INTACTA) ================= -->
+<!-- ================= TABELA DE SERVIÇOS ================= -->
 <section id="precos" class="aba">
   <div class="documento-oficial">
     <div class="doc-header">
@@ -163,6 +163,12 @@
     </div>
   </div>
 </section>
+
+<!-- ================= RODAPÉ ================= -->
+<footer class="footer">
+  <div>Sistema institucional — acesso monitorado</div>
+  <div>Site desenvolvido por <strong>Hinara Heloar</strong> — direitos reservados</div>
+</footer>
 
 </main>
 
